--- a/Project1.dproj
+++ b/Project1.dproj
@@ -94,7 +94,7 @@
             <Form>Form1</Form>
             <FormType>dfm</FormType>
         </DCCReference>
-        <DCCReference Include="UserScreen.pas">
+        <DCCReference Include="ZavuchScreen.pas">
             <Form>Form2</Form>
         </DCCReference>
         <DCCReference Include="UsersManage.pas">
@@ -118,6 +118,58 @@
         </DCCReference>
         <DCCReference Include="PupilsCore.pas">
             <Form>Form8</Form>
+            <FormType>dfm</FormType>
+        </DCCReference>
+        <DCCReference Include="AuthCore.pas">
+            <Form>Form9</Form>
+            <FormType>dfm</FormType>
+        </DCCReference>
+        <DCCReference Include="UsersCore.pas">
+            <Form>Form10</Form>
+            <FormType>dfm</FormType>
+        </DCCReference>
+        <DCCReference Include="ClassesCore.pas">
+            <Form>Form11</Form>
+            <FormType>dfm</FormType>
+        </DCCReference>
+        <DCCReference Include="Libs.pas">
+            <Form>Form12</Form>
+            <FormType>dfm</FormType>
+        </DCCReference>
+        <DCCReference Include="teacherScreen.pas">
+            <Form>Form13</Form>
+            <FormType>dfm</FormType>
+        </DCCReference>
+        <DCCReference Include="pupilScreen.pas">
+            <Form>Form14</Form>
+            <FormType>dfm</FormType>
+        </DCCReference>
+        <DCCReference Include="ZavuchClassesManage.pas">
+            <Form>Form15</Form>
+            <FormType>dfm</FormType>
+        </DCCReference>
+        <DCCReference Include="ClassViewScreen.pas">
+            <Form>Form16</Form>
+            <FormType>dfm</FormType>
+        </DCCReference>
+        <DCCReference Include="userInfoScreen.pas">
+            <Form>Form17</Form>
+            <FormType>dfm</FormType>
+        </DCCReference>
+        <DCCReference Include="newZavuchScreen.pas">
+            <Form>Form18</Form>
+            <FormType>dfm</FormType>
+        </DCCReference>
+        <DCCReference Include="newPupilScreen.pas">
+            <Form>Form19</Form>
+            <FormType>dfm</FormType>
+        </DCCReference>
+        <DCCReference Include="newUserScreen.pas">
+            <Form>Form20</Form>
+            <FormType>dfm</FormType>
+        </DCCReference>
+        <DCCReference Include="UsersListsCore.pas">
+            <Form>Form21</Form>
             <FormType>dfm</FormType>
         </DCCReference>
         <BuildConfiguration Include="Release">
