--- a/__recovery/__recovery.ini
+++ b/__recovery/__recovery.ini
@@ -1,10 +1,15 @@
 [UsersCore.pas]
-SaveTime=08.06.2021 13:25:44
+SaveTime=08.06.2021 13:55:44
 FileCount=2
 File0=K:\Универ\прога\курсовая2сем\code\UsersCore.pas
 File1=K:\Универ\прога\курсовая2сем\code\UsersCore.dfm
 [ZavuchClassesManage.pas]
-SaveTime=08.06.2021 13:25:44
+SaveTime=08.06.2021 13:55:44
 FileCount=2
 File0=K:\Универ\прога\курсовая2сем\code\ZavuchClassesManage.pas
 File1=K:\Универ\прога\курсовая2сем\code\ZavuchClassesManage.dfm
+[MainScreen.pas]
+SaveTime=08.06.2021 13:55:44
+FileCount=2
+File0=K:\Универ\прога\курсовая2сем\code\MainScreen.pas
+File1=K:\Универ\прога\курсовая2сем\code\MainScreen.dfm
