--- a/__recovery/__recovery.ini
+++ b/__recovery/__recovery.ini
@@ -1,15 +1,20 @@
 [UsersCore.pas]
-SaveTime=08.06.2021 13:55:44
+SaveTime=09.06.2021 3:29:09
 FileCount=2
 File0=K:\Универ\прога\курсовая2сем\code\UsersCore.pas
 File1=K:\Универ\прога\курсовая2сем\code\UsersCore.dfm
-[ZavuchClassesManage.pas]
-SaveTime=08.06.2021 13:55:44
+[ParentsScreen.pas]
+SaveTime=09.06.2021 3:29:09
 FileCount=2
-File0=K:\Универ\прога\курсовая2сем\code\ZavuchClassesManage.pas
-File1=K:\Универ\прога\курсовая2сем\code\ZavuchClassesManage.dfm
-[MainScreen.pas]
-SaveTime=08.06.2021 13:55:44
+File0=K:\Универ\прога\курсовая2сем\code\ParentsScreen.pas
+File1=K:\Универ\прога\курсовая2сем\code\ParentsScreen.dfm
+[UsersManage.pas]
+SaveTime=09.06.2021 3:29:09
 FileCount=2
-File0=K:\Универ\прога\курсовая2сем\code\MainScreen.pas
-File1=K:\Универ\прога\курсовая2сем\code\MainScreen.dfm
+File0=K:\Универ\прога\курсовая2сем\code\UsersManage.pas
+File1=K:\Универ\прога\курсовая2сем\code\UsersManage.dfm
+[ClassViewScreen.pas]
+SaveTime=09.06.2021 3:29:09
+FileCount=2
+File0=K:\Универ\прога\курсовая2сем\code\ClassViewScreen.pas
+File1=K:\Универ\прога\курсовая2сем\code\ClassViewScreen.dfm
